Fixed get csv file issue
